Trending Topics - Added the "Trends" link in the header_link_left area to show a menu with the current Trending Topics. Also added an option to change the TT locale.

--- a/background.html
+++ b/background.html
@@ -101,6 +101,8 @@ function TweetManager() {
   this.maxApiHitsStates = 30;
   this.apiHitsStates = [];
   this.firstPossibleWarnTime = null;
+  
+  this.ttLocales = null;
 
   this.authenticated = false;
 
@@ -924,6 +926,14 @@ TweetManager.prototype = {
       }
       callback(success, userData);
     }, username);
+  },
+
+  retrieveTrendingTopics: function(callback, woeid) {
+	this.twitterBackend.trendingTopics(function(success, userData) {
+	  if(success) {
+	    callback( userData[0] );
+	  }
+	}, woeid);
   },
 };
 
