--- a/popup.html
+++ b/popup.html
@@ -1545,6 +1545,32 @@ function loadNewTweets() {
   prepareAndLoadTimeline();
 }
 
+function loadTrends() {
+  //var _this = this;
+  //$("#loading").show();
+  currentTTLocale = eval('(' + OptionsBackend.get('trending_topics_woeid')+ ')');
+
+  tweetManager.retrieveTrendingTopics(function(userData) {
+    trendings = [];
+    for( var i=0; i < userData.trends.length; ++i )
+      trendings.push( userData.trends[i].name );
+
+    var myActions = [];
+    $.each( trendings, function(i, myName) {
+      myActions.push({
+        name: myName,
+        action: function(event) {
+          TimelineTab.addNewSearchTab(myName, event.isAlternateClick);
+        },
+      });
+    });
+    $("#trending_topics").actionMenu({
+      actions: myActions, 
+      parentContainer: '#workspace'
+    });
+  }, currentTTLocale.woeid );
+}
+
 function prepareTimelines() {
   $("#update_tweets").hide();
 
@@ -1624,7 +1650,9 @@ function initializeWorkspace() {
     $("#options_page_link").anyClick(function() {
       openTab(chrome.extension.getURL('options.html'));
     });
-
+    
+    loadTrends();
+    
     ImageUpload.init();
   }, 0);
 }
@@ -1635,6 +1663,10 @@ $(function() {
   });
 
   $("span.i18n").each(function() {
+    $(this).html(chrome.i18n.getMessage(this.id));
+  });
+
+  $("a.i18n").each(function() {
     $(this).html(chrome.i18n.getMessage(this.id));
   });
 
@@ -1686,7 +1718,8 @@ $(function() {
     <a href="javascript:signout()"><span id="logout" class="i18n"></span></a> |
     <a href="#" id="options_page_link"><span id="options" class="i18n"></span></a> |
     <a href="javascript:Composer.refreshNew();"><span id="refresh" class="i18n"></span></a> |
-    <a id="suspend_toggle" href="javascript:suspend()"><span id="suspend" class="i18n"></span></a>
+    <a id="suspend_toggle" href="javascript:suspend()"><span id="suspend" class="i18n"></span></a> |
+    <a id="trending_topics" href="#" class="i18n">Trends</a>
     <span id="suspended_notice"><span id="autoUpdatesSuspended" class="i18n"></span></span>
   </span>
   <span class="header_link_right">
