--- a/options.html
+++ b/options.html
@@ -187,47 +187,48 @@ $(function() {
   });
   options.load();
 
-  currentTTLocale = eval('(' + options.optionsMap['trending_topics_woeid']+ ')');
-  if( tweetManager.ttLocales == null )
-  {
-    tweetManager.ttLocales = [ currentTTLocale ];
-    twitterBackend.trendingTopics(function(success,userData) {
-      //$("select[name='trending_topics_woeid']").append($("<option>").attr('value', '1').text('Worldwide'));
+  var currentTTLocale = OptionsBackend.get('trending_topics_woeid');
+  var worldWideWoeid = {
+    woeid: 1,
+    name: 'Worldwide'
+  };
+  var createTTSelect = function(ttLocales) {
+    $("select[name='trending_topics_woeid']").empty();
+    $.each(ttLocales, function(i, locale){
+      $("select[name='trending_topics_woeid']").append($("<option>").attr('value', locale.woeid).text(locale.name));
+    });
+    $("select[name='trending_topics_woeid']").val(currentTTLocale);
+  };
+  if(tweetManager.ttLocales == null) {
+    tweetManager.ttLocales = [worldWideWoeid];
+    twitterBackend.trendingTopics(function(success, userData) {
       if(!success)
         return;
-      function mySort(a,b){
+      function nameSort(a, b) {
         if(a.name < b.name) return -1;
         if(a.name > b.name) return 1;
         return 0;
       };
 
       var woeids = [];
-      $.each(userData, function(i, loc){
-        id = loc.woeid;
-        myName = "";
-        if( loc.placeType.name == "Country" )
+      $.each(userData, function(i, loc) {
+        var myName = "";
+        if(loc.placeType.name == "Country") {
           myName = loc.name;
-        else if( loc.placeType.name == "Town" )
+        } else if(loc.placeType.name == "Town") {
           myName = loc.country + ' - ' + loc.name;
-        else
+        } else {
           return;
-        woeids.push({woeid: id, name: myName});
+        }
+        woeids.push({woeid: loc.woeid, name: myName});
       });
-      woeids.sort(mySort);
-      woeids.unshift({woeid:'1', name: 'Worldwide'});
+      woeids.sort(nameSort);
+      woeids.unshift(worldWideWoeid);
       tweetManager.ttLocales = woeids;
-      $("select[name='trending_topics_woeid']").empty();
-      $.each( tweetManager.ttLocales, function(i, id){
-        $("select[name='trending_topics_woeid']").append($("<option>").attr('value', '{woeid:\''+id.woeid+'\',name:\''+id.name+'\'}').text(id.name));
-      });
-      $("select[name='trending_topics_woeid']").val(options.optionsMap['trending_topics_woeid']);  
-    }, 'available' );
+      createTTSelect(tweetManager.ttLocales);
+    }, 'available');
   }
-  $("select[name='trending_topics_woeid']").empty();
-  $.each( tweetManager.ttLocales, function(i, id){
-    $("select[name='trending_topics_woeid']").append($("<option>").attr('value', '{woeid:\''+id.woeid+'\',name:\''+id.name+'\'}').text(id.name));
-  });
-  $("select[name='trending_topics_woeid']").val(options.optionsMap['trending_topics_woeid']);
+  createTTSelect(tweetManager.ttLocales);
 
   updatePredictedHitsCount();
   $('table.timelines input, table.timelines select').
@@ -510,7 +511,7 @@ function updatePredictedHitsCount() {
     <label for="url_shortener" class="i18n" id="l_image_up_service">Image Upload Service:</label>
     <select name="image_upload_service"></select>
   </fieldset>
-  
+
   <fieldset>
     <legend class="i18n" id="g_trending_topics">Trending Topics</legend>
     <label for="trending_topics_woeid" class="i18n" id="l_trending_topics_woeid">Trending Topics Locale:</label>
