--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="google-site-verification" content="1rEVGioqAO99isMIDpH4UoBdehcMJB1EN5LTZi09-Nw" />
     <meta name="keywords" content="google chrome, chromium, extension, twitter">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js" type="text/javascript"></script>
 	<title>Chromed Bird</title>
 
 	<style type="text/css">
@@ -82,6 +81,7 @@
       font-size: 1.2em;
     }
     </style>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js" type="text/javascript"></script>
 <script type="text/javascript">
 $(function() {
   var mail = "cezarsa";
@@ -91,15 +91,8 @@ $(function() {
   $("span.my_email").html($("<a></a>").attr('href', "mailto:" + mail).text(mail));
 
   var ua = navigator.userAgent;
-  if(ua.match(/Chrome/i)) {
-    var versionMain = ua.match(/Chrome\/(\d)/)[1];
-    if(versionMain >= 4) {
-      $("#install").show();
-    } else {
-      $("#wrong_browser").text("You are running an unsupported version of Google Chrome. Check the compatibility note.");
-      $("#wrong_browser").show();
-    }
-  } else {
+  if(!ua.match(/Chrome/i)) {
+    $("#install").hide();
     $("#wrong_browser").text("This is a Google Chrome extension, and you are not running it.");
     $("#wrong_browser").show();
   }
@@ -128,7 +121,7 @@ $(function() {
 <div id="wrong_browser" class="top_box" style="display: none;">
 </div>
 
-<a target="_top" id="install" class="top_box" style="display: none;" href="https://chrome.google.com/extensions/detail/encaiiljifbdbjlphpgpiimidegddhic">
+<a target="_top" id="install" class="top_box" href="https://chrome.google.com/extensions/detail/encaiiljifbdbjlphpgpiimidegddhic">
 Get it!
 </a>
 
