Displaying options to enable user stream.

--- a/options.html
+++ b/options.html
@@ -581,6 +581,7 @@ function updatePredictedHitsCount() {
 
   <fieldset>
     <legend class="i18n" id="g_advanced">Advanced</legend>
+
     <label for="request_timeout" class="i18n" id="l_request_timeout">Request Timeout (ms):</label>
     <input type="text" name="request_timeout" validator="required,number,positive" must_restart><br>
     <label for="base_url" class="i18n" id="l_base_url">Twitter's API URL:</label>
@@ -598,6 +599,12 @@ function updatePredictedHitsCount() {
 
     <label for="base_search_url" class="i18n" id="l_base_search_url">Search API URL:</label>
     <input type="text" name="base_search_url" style="width: 300px;" validator="required,url" must_restart><br>
+
+    <label for="use_streaming_api" class="i18n" id="l_use_streaming_api">Use streaming API:</label>
+    <input type="checkbox" name="use_streaming_api"><br>
+
+    <label for="user_stream_url" class="i18n" id="l_user_stream_url">User Stream URL:</label>
+    <input type="text" name="user_stream_url" style="width: 300px;" validator="required,url" must_restart><br>
   </fieldset>
 
   <br>
