After removing a tab we should return to the previously selected one. This was ultra annoying.

--- a/background.html
+++ b/background.html
@@ -93,6 +93,7 @@ function TweetManager() {
     _this.currentTimelineId = timeline.timelineId;
     return false;
   }, true);
+  this.previousTimelineId = null;
 
   this.warningsCallback = null;
   this.warningMessage = null;
