--- a/popup.html
+++ b/popup.html
@@ -1183,6 +1183,7 @@ var TimelineTab = {
       tabTemplate: '<li id="tab_#{href}" class="timeline_tab"><a href="#{href}"><span>#{label}</span></a></li>',
       selected: 0,
       select: function(event, ui) {
+        tweetManager.previousTimelineId = tweetManager.currentTimelineId;
         tweetManager.currentTimelineId = ui.panel.id.split('-')[1];
         prepareAndLoadTimeline();
       },
@@ -1252,6 +1253,9 @@ var TimelineTab = {
   },
 
   removeTab: function(timelineId) {
+    if(timelineId == tweetManager.currentTimelineId && tweetManager.previousTimelineId) {
+      this.select(tweetManager.previousTimelineId);
+    }
     $("#tabs > ul li:has(a[href])").each(function(index, el) {
       if($(el).attr('id') == 'tab_#timeline-' + timelineId) {
         $("#tabs").tabs('remove', index);
