Store ignored usernames in addition to user ids, and filter tweets in timelines matching those names/ids

--- a/background.html
+++ b/background.html
@@ -57,6 +57,7 @@ function TweetManager() {
 
   // Using an object instead of an array to take advantage of hash look-ups
   this.blockedUserIds = {};
+  this.blockedUserNames = [];
 
   this.newTweetsCallback = null;
 
@@ -251,11 +252,13 @@ TweetManager.prototype = {
   */
   retrieveBlockedUserIds: function() {
     var _this = this;
-    this.twitterBackend.blockedUserIds(function(success, data, status, context) {
+    this.twitterBackend.blockedUsers(function(success, data, status, context) {
         if(success) {
           _this.blockedUserIds = {};
+          _this.blockedUserNames = [];
           for(var i in data) {
-            _this.blockedUserIds[data[i]] = data[i];
+            _this.blockedUserIds[data[i].id] = data[i].id;
+            _this.blockedUserNames[i] = data[i].screen_name;
           }
         }
         setTimeout(function() { _this.retrieveBlockedUserIds(); }, OptionsBackend.get('blockedusers_refresh_interval'));
