Little issue with variable names... Added internationalization support for the newly added labels. Updated the pt_BR translation.

--- a/options.html
+++ b/options.html
@@ -473,7 +473,7 @@ function updatePredictedHitsCount() {
       <input type="text" name="yourls_key">
     </p>
 	<p id="googl_opts">
-	  <label for="googl_personal_account">Use personal account authorization:</label>
+	  <label for="googl_personal_account" class="i18n" id="l_shortener_oauth">Use personal account authentication:</label>
 	  <input type="checkbox" name="shortener_oauth"><br/>
 	</p>
     <label for="share_include_title" class="i18n" id="l_share_include_title">Include page title (sharing):</label>
