Forcing restart after enabling/disabling streaming.

--- a/options.html
+++ b/options.html
@@ -605,7 +605,7 @@ function updatePredictedHitsCount() {
     <input type="text" name="base_search_url" style="width: 300px;" validator="required,url" must_restart><br>
 
     <label for="use_streaming_api" class="i18n" id="l_use_streaming_api">Use streaming API:</label>
-    <input type="checkbox" name="use_streaming_api"><br>
+    <input type="checkbox" name="use_streaming_api" must_restart><br>
 
     <label for="user_stream_url" class="i18n" id="l_user_stream_url">User Stream URL:</label>
     <input type="text" name="user_stream_url" style="width: 300px;" validator="required,url" must_restart><br>
