So long Chromed Bird, and thanks for all the fish.

--- a/oauth_callback.html
+++ b/oauth_callback.html
@@ -6,7 +6,7 @@
 <script type="text/javascript" src="lib/shortener_lib.js"></script>
 <script type="text/javascript" src="lib/3rdparty/sha1.js"></script>
 
-<title>Chromed Bird - OAuth Callback</title>
+<title>Shiny Bird - OAuth Callback</title>
 </head>
 <body>
 <div style="width=600">
