--- a/options.html
+++ b/options.html
@@ -11,7 +11,7 @@
 <script type="text/javascript" src="lib/shortener_lib.js"></script>
 
 <script type="text/javascript" src="lib/options/options.js"></script>
-<title>Chromed Bird Options</title>
+<title>Shiny Bird Options</title>
 
 <script type="text/javascript">
 var LocaleTable = chrome.extension.getBackgroundPage().LocaleTable;
@@ -302,7 +302,7 @@ function updatePredictedHitsCount() {
 </head>
 <body>
 
-<h1 class="i18n" id="options_title">Chromed Bird Options</h1>
+<h1 class="i18n" id="options_title">Shiny Bird Options</h1>
 
 <div id="saved_notice">
   <span class="i18n" id="conf_saved">Your configuration has been successfully saved!</span>
@@ -507,7 +507,7 @@ function updatePredictedHitsCount() {
   <fieldset>
     <legend class="i18n" id="g_timelines">Timelines</legend>
     <p class="notice i18n" style="text-align: center; color: black;" id="notice_api_hits">
-      You should keep API hits <span style="color: red;">below <span class="__hourly_limit"></span></span>! Otherwise Chromed Bird will stop working properly and timelines won't update anymore.<br>
+      You should keep API hits <span style="color: red;">below <span class="__hourly_limit"></span></span>! Otherwise Shiny Bird will stop working properly and timelines won't update anymore.<br>
       <span style="color: red;">Remember</span> that if you're using multiple Twitter clients you'll need to keep your API hits even lower.
     </p>
     <p class="hits_notice">
